--- a/index.html
+++ b/index.html
@@ -32,8 +32,27 @@
                 <a href="#">www.csd.tsu.ru</a>
             </p>
 
-            <aside>
-                <!-- Здесь будет список -->
+            <aside class="list">
+                <h3><span class="red_word">Here</span> is the list:</h3>
+                <ul>
+                    <li>Value 1</li>
+                    <li>Value 2</li>
+                    <li>Value 3</li>
+                </ul>
+            </aside>
+            <aside class="visual_styles">
+                <h3>Here are some visual styles:</h3>
+                <ul>
+                    <li>Italic</li>
+                    <li>Bold</li>
+                    <li>Underlined</li>
+                    <li>Line through</li>
+                </ul>
+            </aside>
+            <aside class="table">
+                <table>
+                    
+                </table>
             </aside>
         </section>
     </body>
