--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta name="description" content="Первая лаба">
@@ -18,15 +18,16 @@
         </header>
 
         <section class="content">
-            <h1>Hello, content!</h1>
-            <div class="figure"></div>
-
-            <p class="text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            </p>
+            <article>
+                <h2>Hello, content!</h2>
+                <div class="figure"></div>
+                <p class="text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
+            </article>
 
             <p class="link">
                 <a href="#">www.csd.tsu.ru</a>
@@ -51,9 +52,28 @@
             </aside>
             <aside class="table">
                 <table>
-                    
+                    <tr>
+                        <td rowspan="2">1</td>
+                        <td>2</td>
+                        <td>3</td>
+                    </tr>
+
+                    <tr>
+                        <td>4</td>
+                        <td>5</td>
+                    </tr>
+
+                    <tr>
+                        <td>6</td>
+                        <td colspan="2">7</td>
+                    </tr>
                 </table>
+                <img src="images.png" alt="like">
             </aside>
         </section>
+
+        <footer class="footer">
+            <p>Hello, Footer!</p>
+        </footer>
     </body>
 </html>
