--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <header class="header">
-            <p>Hello, Header!</p>
+            <h1>Hello, Header!</h1>
         </header>
 
         <section class="content">
@@ -33,20 +33,20 @@
                 <a href="#">www.csd.tsu.ru</a>
             </p>
 
-            <aside class="list">
+            <nav class="list">
                 <h3><span class="red_word">Here</span> is the list:</h3>
                 <ul>
                     <li>Value 1</li>
                     <li>Value 2</li>
                     <li>Value 3</li>
                 </ul>
-            </aside>
+            </nav>
             <aside class="visual_styles">
                 <h3>Here are some visual styles:</h3>
                 <ul>
-                    <li>Italic</li>
-                    <li>Bold</li>
-                    <li>Underlined</li>
+                    <li><i>Italic</i></li>
+                    <li><b>Bold</b></li>
+                    <li><u>Underlined</u></li>
                     <li>Line through</li>
                 </ul>
             </aside>
