--- a/index.html
+++ b/index.html
@@ -7,73 +7,29 @@
         <meta name="application name" content="web-page">
         <meta name="keywords" content="html, css, тгу, ипмкн, лаба">
 
-        <title>Web lab1</title>
+        <title>Web lab2</title>
 
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 
     <body>
-        <header class="header">
-            <h1>Hello, Header!</h1>
-        </header>
-
-        <section class="content">
-            <article>
-                <h2>Hello, content!</h2>
-                <div class="figure"></div>
-                <p class="text">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                    It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                    It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                </p>
-            </article>
-
-            <p class="link">
-                <a href="#">www.csd.tsu.ru</a>
-            </p>
-
-            <nav class="list">
-                <h3><span class="red_word">Here</span> is the list:</h3>
-                <ul>
-                    <li>Value 1</li>
-                    <li>Value 2</li>
-                    <li>Value 3</li>
-                </ul>
-            </nav>
-            <aside class="visual_styles">
-                <h3>Here are some visual styles:</h3>
-                <ul>
-                    <li><i>Italic</i></li>
-                    <li><b>Bold</b></li>
-                    <li><u>Underlined</u></li>
-                    <li>Line through</li>
-                </ul>
-            </aside>
-            <aside class="table">
-                <table>
-                    <tr>
-                        <td rowspan="2">1</td>
-                        <td>2</td>
-                        <td>3</td>
-                    </tr>
-
-                    <tr>
-                        <td>4</td>
-                        <td>5</td>
-                    </tr>
-
-                    <tr>
-                        <td>6</td>
-                        <td colspan="2">7</td>
-                    </tr>
-                </table>
-                <img src="images.png" alt="like">
-            </aside>
-        </section>
-
-        <footer class="footer">
-            <p>Hello, Footer!</p>
-        </footer>
+        <h1>Лабораторная работа №2</h1>
+        <ul>
+            <li><a href="pages/task1.html">Страница 1</a></li>
+            <li><a href="pages/task2.html">Страница 2</a></li>
+            <li><a href="#">Страница 3</a></li>
+            <li><a href="#">Страница 4</a></li>
+            <li><a href="#">Страница 5</a></li>
+            <li><a href="#">Страница 6</a></li>
+            <li><a href="#">Страница 7</a></li>
+            <li><a href="#">Страница 8</a></li>
+            <li><a href="#">Страница 9</a></li>
+            <li><a href="#">Страница 10</a></li>
+            <li><a href="#">Страница 11</a></li>
+            <li><a href="#">Страница 12</a></li>
+            <li><a href="#">Страница 13</a></li>
+            <li><a href="#">Страница 14</a></li>
+            <li><a href="#">Страница 15</a></li>
+        </ul>
     </body>
 </html>
