--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="pages/task1.html">Страница 1</a></li>
             <li><a href="pages/task2.html">Страница 2</a></li>
-            <li><a href="#">Страница 3</a></li>
+            <li><a href="pages/task3.html">Страница 3</a></li>
             <li><a href="#">Страница 4</a></li>
             <li><a href="#">Страница 5</a></li>
             <li><a href="#">Страница 6</a></li>
