--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="pages/task1.html">Страница 1</a></li>
             <li><a href="pages/task2.html">Страница 2</a></li>
             <li><a href="pages/task3.html">Страница 3</a></li>
-            <li><a href="#">Страница 4</a></li>
+            <li><a href="pages/task4.html">Страница 4</a></li>
             <li><a href="#">Страница 5</a></li>
             <li><a href="#">Страница 6</a></li>
             <li><a href="#">Страница 7</a></li>
