add all pages links

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
             <li><a href="pages/task3.html">Страница 3</a></li>
             <li><a href="pages/task4.html">Страница 4</a></li>
             <li><a href="pages/task5.html">Страница 5</a></li>
-            <li><a href="#">Страница 6</a></li>
-            <li><a href="#">Страница 7</a></li>
-            <li><a href="#">Страница 8</a></li>
-            <li><a href="#">Страница 9</a></li>
-            <li><a href="#">Страница 10</a></li>
-            <li><a href="#">Страница 11</a></li>
-            <li><a href="#">Страница 12</a></li>
-            <li><a href="#">Страница 13</a></li>
-            <li><a href="#">Страница 14</a></li>
-            <li><a href="#">Страница 15</a></li>
+            <li><a href="pages/task6.html">Страница 6</a></li>
+            <li><a href="pages/task7.html">Страница 7</a></li>
+            <li><a href="pages/task8.html">Страница 8</a></li>
+            <li><a href="pages/task9.html">Страница 9</a></li>
+            <li><a href="pages/task10.html">Страница 10</a></li>
+            <li><a href="pages/task11.html">Страница 11</a></li>
+            <li><a href="pages/task12.html">Страница 12</a></li>
+            <li><a href="pages/task13.html">Страница 13</a></li>
+            <li><a href="pages/task14.html">Страница 14</a></li>
+            <li><a href="pages/task15.html">Страница 15</a></li>
         </ul>
     </body>
 </html>
