--- a/index.html
+++ b/index.html
@@ -8,20 +8,16 @@
     </head>
 
     <body>
-        <form>
-            <input type="text">
-            <br>
-            <input type="button" value="Квадрат" id="square-button">
-            <input type="button" value="Треугольник" id="triangle-button">
-            <input type="button" value="Круг" id="circle-button">
-        </form>
+        <input type="text" name="amount" id="input" value="1">
+        <br>
+        <input type="button" value="Квадрат" id="square-button">
+        <input type="button" value="Треугольник" id="triangle-button">
+        <input type="button" value="Круг" id="circle-button">
 
+        <script src="random.js"></script>
+        <script src="input.js"></script>
         <script src="addSquare.js"></script>
-
-        <!-- <div class="square"></div> -->
-
-        <div class="triangle"></div>
-
-        <!-- <div class="circle"></div> -->
+        <script src="addTriangle.js"></script>
+        <script src="addCircle.js"></script>
     </body>
 </html>
